tests/baselines/reference/issue50680.errors.txt
tests/cases/compiler/issue50680.ts(5,11): error TS2322: Type 'string' is not assignable to type '"aa" | "bb"'.
tests/cases/compiler/issue50680.ts(13,11): error TS2322: Type 'string' is not assignable to type '"aa" | "bb"'.
tests/cases/compiler/issue50680.ts(14,11): error TS2322: Type 'string[]' is not assignable to type '("aa" | "bb")[]'.
  Type 'string' is not assignable to type '"aa" | "bb"'.


==== tests/cases/compiler/issue50680.ts (3 errors) ====
    declare function func<T extends string>(arg: { keys: T[] }): { readonly keys: T[]; readonly firstKey: T; };
    
    function func1() {
        const { firstKey } = func({keys: ["aa", "bb"]})
        const a: "aa" | "bb" = firstKey;
              ~
!!! error TS2322: Type 'string' is not assignable to type '"aa" | "bb"'.
    
        const { keys } = func({keys: ["aa", "bb"]})
        const b: ("aa" | "bb")[] = keys;
    }
      
    function func2() {
        const { keys, firstKey } = func({keys: ["aa", "bb"]})
        const a: "aa" | "bb" = firstKey;
              ~
!!! error TS2322: Type 'string' is not assignable to type '"aa" | "bb"'.
        const b: ("aa" | "bb")[] = keys;
              ~
!!! error TS2322: Type 'string[]' is not assignable to type '("aa" | "bb")[]'.
!!! error TS2322:   Type 'string' is not assignable to type '"aa" | "bb"'.
    }
    
    function func3() {
        const x = func({keys: ["aa", "bb"]})
        const a: "aa" | "bb" = x.firstKey;
        const b: ("aa" | "bb")[] = x.keys;
    }
    